--- a/Pokedex/Targets/Pokedex/Sources/Scenes/Catch Scene/CatchViewController.storyboard
+++ b/Pokedex/Targets/Pokedex/Sources/Scenes/Catch Scene/CatchViewController.storyboard
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +10,7 @@
         <!--Catch View Controller-->
         <scene sceneID="Sf8-0k-iHG">
             <objects>
-                <viewController storyboardIdentifier="CatchViewController" id="6JY-wC-gpp" customClass="CatchViewController" customModule="Wefox_Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CatchViewController" id="6JY-wC-gpp" customClass="CatchViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ywu-gT-m6t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,6 +20,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YzX-Yf-1Ql">
                                 <rect key="frame" x="127.5" y="501" width="120" height="120"/>
+                                <accessibility key="accessibilityConfiguration" identifier="Catch"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="OAM-Xw-BXP"/>
                                     <constraint firstAttribute="height" constant="120" id="mYr-ZQ-7iZ"/>
@@ -33,6 +31,7 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="ODG-Sk-nvn"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sf1-cg-uKF" firstAttribute="trailing" secondItem="ODG-Sk-nvn" secondAttribute="trailing" id="1dX-3i-wrw"/>
@@ -42,7 +41,6 @@
                             <constraint firstItem="sf1-cg-uKF" firstAttribute="leading" secondItem="ODG-Sk-nvn" secondAttribute="leading" id="XEf-aR-tOk"/>
                             <constraint firstItem="sf1-cg-uKF" firstAttribute="bottom" secondItem="Ywu-gT-m6t" secondAttribute="bottom" id="orC-nU-Ixw"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="ODG-Sk-nvn"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y3d-JN-ISV" userLabel="First Responder" sceneMemberID="firstResponder"/>
